fix: Align person description correctly

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -572,3 +572,7 @@ $bg: "/img/bg.webp";
     display: none;
   }
 }
+
+.pf-x-u-text--center {
+  text-align: center;
+}
